Fixed result box overlapping with footer

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 	font-family: 'Questrial', sans-serif;
 	min-height: 100%;
 	position: relative;
+	padding-bottom: 100px;
 }
 
 #navBar {
